@@ -1,22 +1,17 @@
 					MathGL (for v.1.11.*)
 
-c. Colorbar: print more digits for manual arrays ... but avoid overlapping
-b. Colorbar: add grid for label values; check that labels must be at top!
-a. Save InPlot information in OI[] (i.e. like ObjId) -- fill rectangle then inplot is called.
+c. Colorbar: print more digits for manual arrays ... but avoid overlapping ???
 0. Miss MAJOR labels or decrease its fontsize if labels too close.
 	Also check that enough digits is printed to distingush the labels
 	Also allow "time"-labels
 	Also allow rotate labels if they too dense
 1. Import/Export via GIF (as 3d data) ??? + 16bit PNG ?!!
 2. Spline5
-3. mglGraphPS -- each prim have the inplot id & reference to settings list (lights, alpha, fog).
 4. Add plot layot -- i.e. reserve space for title and so on ... May be the best way to analyze code itself ???
 5. Try to decrease font size if tick labels overlap ???
 
 6. \dfrac for normal size and centering ???
 7. "Chaos" in area.png (near axis) ???
-
-8. MGL options -- add argument parsing !!!
 
 
 					MathGL (for v.2.?) ???
