@@ -1,7 +1,11 @@
 1.10.1 Released ?? February 2010
 	- Add parsing of option arguments.
+	- If text style contain 'a' then text in absolute coordinates is drawn.
+	- Add extra argument for 'box' command.
+	- Add ticks (lines) for Colorbar.
 	- Colorbar factor now placed at top of a plot.
-	- Bug of double glyph drawing in mglGraphPS
+	- Bug with missing ticks tunning in Colorbar.
+	- Bug of double glyph drawing in mglGraphPS.
 
 1.10 Released 25 December 2009
 	- Change license from GPL to LGPL for MathGL core. SWIG-based interfaces still have GPL.
